
noinst_LTLIBRARIES = libmcwidget.la

libmcwidget_la_SOURCES = \
	button.cpp button.h \
	buttonbar.cpp buttonbar.h \
	check.cpp check.h \
	dialog.cpp dialog.h \
	dialog-switch.cpp dialog-switch.h \
	gauge.cpp gauge.h \
	groupbox.cpp groupbox.h \
	hline.cpp hline.h \
	history.cpp history.h \
	input.cpp input.h \
	input_complete.cpp input_complete.h \
	listbox-window.cpp listbox-window.h \
	listbox.cpp listbox.h \
	label.cpp label.h \
	menu.cpp menu.h \
	mouse.cpp mouse.h \
	quick.cpp quick.h \
	radio.cpp radio.h \
	widget-common.cpp widget-common.h \
	wtools.cpp wtools.h

AM_CPPFLAGS = -I$(top_srcdir) $(GLIB_CFLAGS)
